[package]
name = "rolling-median"
description = "Compute the median using a 'rolling' (online) algorithm"
license = "0BSD"
repository = "https://github.com/lordmulder/rustc-version-const"
version = "1.0.0"
edition = "2018"

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = [ "std" ] }

[dev-dependencies]
rand_pcg = { version = "0.9.0", default-features = false }
