[package]
name = "rolling-median"
description = "Compute the median using a 'rolling' (online) algorithm"
license = "0BSD"
repository = "https://github.com/lordmulder/rolling-median"
version = "1.5.5"
edition = "2018"

[dev-dependencies]
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
rand = { version = "0.9.2", default-features = false }
rand_pcg = { version = "0.9.0", default-features = false }
